--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,10 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Obligatorisk oppgave 2</title>
+    <script type="application/javascript" src="index.js"></script>
 </head>
+
 <body>
+<h1>Bestilling av kinobiletter</h1>
+
+<div>
+    <label for="ulikeFilmer">Velg film: </label>
+    <select id="ulikeFilmer" required>
+        <option value="" disabled selected>Velg film her</option>
+        <option value="Bambi">Bambi</option>
+        <option value="Mulan">Mulan</option>
+        <option value="Nemo">Nemo</option>
+        <option value="Aladdin">Aladdin</option>
+        <option value="Herkules">Herkules</option>
+        <option value="Tarzan">Tarzan</option>
+    </select>
+    <span id="skrivNoeFilm" style="color: red"></span>
+</div>
+
+<br> <!-- For å få mellomrom melom "velg film" og "antall" seksjonene. -->
+
+<div>
+    <label for="antall">Antall</label>
+    <input id="antall" type="number" required>
+    <span id="skrivNoeAntall" style="color: red"></span>
+</div>
+
+<div>
+    <label for="fornavn">Fornavn</label>
+    <input id="fornavn" type="text" required>
+    <span id="skrivNoeFornavn" style="color: red"></span>
+</div>
+
+<div>
+    <label for="etternavn">Etternavn</label>
+    <input id="etternavn" type="text" required>
+    <span id="skrivNoeEtternavn" style="color:red;"></span>
+</div>
+
+<div>
+    <label for="telefonnr">Telefonnr</label>
+    <input id="telefonnr" type="tel" required>
+    <span id="skrivNoeTelefonnr" style="color: red"></span>
+</div>
+
+<div>
+    <label for="epost">Epost</label>
+    <input id="epost" type="email" required>
+    <span id="skrivNoeEpost" style="color: red"></span>
+</div>
+
+<div>
+    <button onclick="kjopBillett()">Kjøp billett</button>
+</div>
+
+<h2>Alle billetter</h2>
+<div id="liste"></div>
+
+<br>
+
+<div>
+    <button onclick="slettBillett()">Slett alle billettene</button>
+</div>
 
 </body>
 </html>
